samples/_failures_safe/1761350559_ec9f33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5565880b.c: In function ‘main’:
./samples/SAFE/__tmp_5565880b.c:161:5: error: expected declaration or statement at end of input
  161 |     printf("Enter expression to tokenize: ");
      |     ^~~~~~
